force-app/main/default/objects/DHS_Document_Request__c/DHS_Document_Request__c.object-meta.xml
<CustomObject>
    <label>Document Request</label>
    <nameField>
        <displayFormat>DR-{0000000}</displayFormat>
        <label>Document Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>