force-app/main/default/objects/DHS_Document_Request__c/fields/DHS_Case__c.field-meta.xml
<CustomField>
    <fullName>DHS_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DHS Case</label>
    <referenceTo>DHS_Case__c</referenceTo>
    <relationshipLabel>DHS Document Requests</relationshipLabel>
    <relationshipName>DHS_Case_Document_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>