force-app/main/default/objects/DHS_Document_Request__c/fields/DHS_Lead__c.field-meta.xml
<CustomField>
    <fullName>DHS_Lead__c</fullName>
    <label>Lead</label>
    <referenceTo>DHS_Lead__c</referenceTo>
    <relationshipLabel>Document Requests</relationshipLabel>
    <relationshipName>DHS_Document_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>