force-app/main/default/objects/DHS_Document_Request__c/fields/Investigator_Comments__c.field-meta.xml
<CustomField>
    <fullName>Investigator_Comments__c</fullName>
    <label>Investigator Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>