force-app/main/default/objects/DHS_Document_Request__c/fields/Subject_Comments__c.field-meta.xml
<CustomField>
    <fullName>Subject_Comments__c</fullName>
    <label>Subject Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>