force-app/main/default/objects/DHS_Document_Request__c/listViews/DHS_All.listView-meta.xml
<ListView>
    <fullName>DHS_All</fullName>
    <filterScope>Everything</filterScope>
    <label>DHS_All</label>
</ListView>